--- a/src/scss/abstracts/_abstracts.scss
+++ b/src/scss/abstracts/_abstracts.scss
@@ -1,6 +1,7 @@
-// =====================================================
-// Abstracts
-// =====================================================
+/**
+ * Copyright @ 2023 Sparkle
+ * https://github.com/danieledeluca/sparkle
+ */
 
 @import 'functions/functions';
 @import 'variables/variables';
