--- a/src/scss/abstracts/functions/_color-contrast.scss
+++ b/src/scss/abstracts/functions/_color-contrast.scss
@@ -1,6 +1,7 @@
-// =====================================================
-// Color contrast
-// =====================================================
+/**
+ * Copyright @ 2023 Sparkle
+ * https://github.com/danieledeluca/sparkle
+ */
 
 $min-contrast-ratio: 4.5 !default;
 
