--- a/src/scss/abstracts/functions/_math.scss
+++ b/src/scss/abstracts/functions/_math.scss
@@ -1,6 +1,7 @@
-// =====================================================
-// Math
-// =====================================================
+/**
+ * Copyright @ 2023 Sparkle
+ * https://github.com/danieledeluca/sparkle
+ */
 
 @use 'sass:math';
 
