--- a/src/scss/abstracts/functions/_responsive-font-size.scss
+++ b/src/scss/abstracts/functions/_responsive-font-size.scss
@@ -1,6 +1,7 @@
-// =====================================================
-// Responsive font size
-// =====================================================
+/**
+ * Copyright @ 2023 Sparkle
+ * https://github.com/danieledeluca/sparkle
+ */
 
 $rfs-base-value: 1.25rem !default;
 $rfs-factor: 3 !default;
