--- a/src/scss/abstracts/functions/_svg-encode.scss
+++ b/src/scss/abstracts/functions/_svg-encode.scss
@@ -1,6 +1,7 @@
-// =====================================================
-// SVG encode
-// =====================================================
+/**
+ * Copyright @ 2023 Sparkle
+ * https://github.com/danieledeluca/sparkle
+ */
 
 @function svg-encode($string) {
     $encoding-reference: (
