--- a/src/scss/abstracts/functions/_transition.scss
+++ b/src/scss/abstracts/functions/_transition.scss
@@ -1,6 +1,7 @@
-// =====================================================
-// Transition
-// =====================================================
+/**
+ * Copyright @ 2023 Sparkle
+ * https://github.com/danieledeluca/sparkle
+ */
 
 $transition-duration: 0.3s !default;
 $transition-timing-function: ease-in-out !default;
