--- a/src/scss/abstracts/functions/_utilities.scss
+++ b/src/scss/abstracts/functions/_utilities.scss
@@ -1,6 +1,7 @@
-// =====================================================
-// Utility
-// =====================================================
+/**
+ * Copyright @ 2023 Sparkle
+ * https://github.com/danieledeluca/sparkle
+ */
 
 $rem-value: 16 !default;
 
