--- a/src/scss/abstracts/mixins/_mixins.scss
+++ b/src/scss/abstracts/mixins/_mixins.scss
@@ -1,6 +1,7 @@
-// =====================================================
-// Mixins
-// =====================================================
+/**
+ * Copyright @ 2023 Sparkle
+ * https://github.com/danieledeluca/sparkle
+ */
 
 @import 'media-queries';
 @import 'typography';
