--- a/src/scss/abstracts/variables/_body.scss
+++ b/src/scss/abstracts/variables/_body.scss
@@ -1,6 +1,7 @@
-// =====================================================
-// Body
-// =====================================================
+/**
+ * Copyright @ 2023 Sparkle
+ * https://github.com/danieledeluca/sparkle
+ */
 
 $body-background-color: $light !default;
 $body-color: $dark !default;
