--- a/src/scss/abstracts/variables/_colors.scss
+++ b/src/scss/abstracts/variables/_colors.scss
@@ -1,6 +1,7 @@
-// =====================================================
-// Colors
-// =====================================================
+/**
+ * Copyright @ 2023 Sparkle
+ * https://github.com/danieledeluca/sparkle
+ */
 
 // Grays
 $gray-50: #fafafa !default;
