--- a/src/scss/abstracts/variables/_forms.scss
+++ b/src/scss/abstracts/variables/_forms.scss
@@ -1,6 +1,7 @@
-// =====================================================
-// Forms
-// =====================================================
+/**
+ * Copyright @ 2023 Sparkle
+ * https://github.com/danieledeluca/sparkle
+ */
 
 // Label
 $label-margin-bottom: 0.5rem !default;
