--- a/src/scss/abstracts/variables/_images.scss
+++ b/src/scss/abstracts/variables/_images.scss
@@ -1,6 +1,7 @@
-// =====================================================
-// Images
-// =====================================================
+/**
+ * Copyright @ 2023 Sparkle
+ * https://github.com/danieledeluca/sparkle
+ */
 
 // Figure
 $figure-margin: 0 0 1rem !default;
