--- a/src/scss/abstracts/variables/_tables.scss
+++ b/src/scss/abstracts/variables/_tables.scss
@@ -1,6 +1,7 @@
-// =====================================================
-// Tables
-// =====================================================
+/**
+ * Copyright @ 2023 Sparkle
+ * https://github.com/danieledeluca/sparkle
+ */
 
 $table-margin-bottom: 1rem !default;
 $table-caption-side: bottom !default;
