--- a/src/scss/abstracts/variables/_typography.scss
+++ b/src/scss/abstracts/variables/_typography.scss
@@ -1,6 +1,7 @@
-// =====================================================
-// Typography
-// =====================================================
+/**
+ * Copyright @ 2023 Sparkle
+ * https://github.com/danieledeluca/sparkle
+ */
 
 // Font families
 $font-family-sans-serif: 'Inter', sans-serif !default;
