--- a/src/scss/abstracts/variables/_utilities.scss
+++ b/src/scss/abstracts/variables/_utilities.scss
@@ -1,6 +1,7 @@
-// =====================================================
-// Utilities
-// =====================================================
+/**
+ * Copyright @ 2023 Sparkle
+ * https://github.com/danieledeluca/sparkle
+ */
 
 // Spacer
 $spacer: 1rem !default;
