--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -1,6 +1,7 @@
-// =====================================================
-// Base
-// =====================================================
+/**
+ * Copyright @ 2023 Sparkle
+ * https://github.com/danieledeluca/sparkle
+ */
 
 @import 'reset/reset';
 @import 'typography';
