--- a/src/scss/base/reset/_images.scss
+++ b/src/scss/base/reset/_images.scss
@@ -1,6 +1,7 @@
-// =====================================================
-// Embedded content
-// =====================================================
+/**
+ * Copyright @ 2023 Sparkle
+ * https://github.com/danieledeluca/sparkle
+ */
 
 // Figure
 figure {
