--- a/src/scss/base/reset/_interactive.scss
+++ b/src/scss/base/reset/_interactive.scss
@@ -1,10 +1,13 @@
-// =====================================================
-// Interactive
-// =====================================================
+/**
+ * Copyright @ 2023 Sparkle
+ * https://github.com/danieledeluca/sparkle
+ */
 
 // Summary
-// =====================================================
-// 1. Add the correct display in all browsers
+/**
+ * Copyright @ 2023 Sparkle
+ * https://github.com/danieledeluca/sparkle
+ */
 
 summary {
     display: list-item; // 1
