--- a/src/scss/base/reset/_misc.scss
+++ b/src/scss/base/reset/_misc.scss
@@ -1,6 +1,7 @@
-// =====================================================
-// Misc
-// =====================================================
+/**
+ * Copyright @ 2023 Sparkle
+ * https://github.com/danieledeluca/sparkle
+ */
 
 // Always hide an element with the `hidden` HTML attribute.
 
