--- a/src/scss/base/reset/_root.scss
+++ b/src/scss/base/reset/_root.scss
@@ -1,6 +1,7 @@
-// =====================================================
-// Root
-// =====================================================
+/**
+ * Copyright @ 2023 Sparkle
+ * https://github.com/danieledeluca/sparkle
+ */
 
 :root {
     @if $enable-smooth-scroll {
