--- a/src/scss/components/_breadcrumb.scss
+++ b/src/scss/components/_breadcrumb.scss
@@ -1,6 +1,7 @@
-// =====================================================
-// Breadcrumb
-// =====================================================
+/**
+ * Copyright @ 2023 Sparkle
+ * https://github.com/danieledeluca/sparkle
+ */
 
 $breadcrumb-list-gap: 0.25rem !default;
 
