--- a/src/scss/components/_components.scss
+++ b/src/scss/components/_components.scss
@@ -1,6 +1,7 @@
-// =====================================================
-// Components
-// =====================================================
+/**
+ * Copyright @ 2023 Sparkle
+ * https://github.com/danieledeluca/sparkle
+ */
 
 @import 'pagination';
 @import 'breadcrumb';
