--- a/src/scss/components/_cover.scss
+++ b/src/scss/components/_cover.scss
@@ -1,6 +1,7 @@
-// =====================================================
-// Cover
-// =====================================================
+/**
+ * Copyright @ 2023 Sparkle
+ * https://github.com/danieledeluca/sparkle
+ */
 
 $cover-padding-y: 7rem !default;
 $cover-padding-y-md: 5rem !default;
