--- a/src/scss/components/_pagination.scss
+++ b/src/scss/components/_pagination.scss
@@ -1,6 +1,7 @@
-// =====================================================
-// Pagination
-// =====================================================
+/**
+ * Copyright @ 2023 Sparkle
+ * https://github.com/danieledeluca/sparkle
+ */
 
 $pagination-list-gap: 0.5rem !default;
 
