--- a/src/scss/components/_parallax.scss
+++ b/src/scss/components/_parallax.scss
@@ -1,6 +1,7 @@
-// =====================================================
-// Parallax
-// =====================================================
+/**
+ * Copyright @ 2023 Sparkle
+ * https://github.com/danieledeluca/sparkle
+ */
 
 .parallax {
     background-position: center center;
