--- a/src/scss/layout/_container.scss
+++ b/src/scss/layout/_container.scss
@@ -1,6 +1,7 @@
-// =====================================================
-// Container
-// =====================================================
+/**
+ * Copyright @ 2023 Sparkle
+ * https://github.com/danieledeluca/sparkle
+ */
 
 .container {
     width: 100%;
