--- a/src/scss/layout/_page-wrapper.scss
+++ b/src/scss/layout/_page-wrapper.scss
@@ -1,6 +1,7 @@
-// =====================================================
-// Page wrapper
-// =====================================================
+/**
+ * Copyright @ 2023 Sparkle
+ * https://github.com/danieledeluca/sparkle
+ */
 
 .page-wrapper {
     flex: 1;
