--- a/src/scss/layout/footer/_copyright.scss
+++ b/src/scss/layout/footer/_copyright.scss
@@ -1,6 +1,7 @@
-// =====================================================
-// Copyright
-// =====================================================
+/**
+ * Copyright @ 2023 Sparkle
+ * https://github.com/danieledeluca/sparkle
+ */
 
 $footer-copyright-color: $footer-color !default;
 $footer-copyright-font-size: 0.75rem !default;
