--- a/src/scss/layout/footer/_footer.scss
+++ b/src/scss/layout/footer/_footer.scss
@@ -1,6 +1,7 @@
-// =====================================================
-// Footer
-// =====================================================
+/**
+ * Copyright @ 2023 Sparkle
+ * https://github.com/danieledeluca/sparkle
+ */
 
 @import 'layout';
 @import 'navbar';
