--- a/src/scss/layout/footer/_layout.scss
+++ b/src/scss/layout/footer/_layout.scss
@@ -1,6 +1,7 @@
-// =====================================================
-// Layout
-// =====================================================
+/**
+ * Copyright @ 2023 Sparkle
+ * https://github.com/danieledeluca/sparkle
+ */
 
 $footer-background-color: $gray-200 !default;
 $footer-color: $body-color !default;
