--- a/src/scss/layout/footer/_navbar.scss
+++ b/src/scss/layout/footer/_navbar.scss
@@ -1,6 +1,7 @@
-// =====================================================
-// Navbar
-// =====================================================
+/**
+ * Copyright @ 2023 Sparkle
+ * https://github.com/danieledeluca/sparkle
+ */
 
 $footer-navbar-min-width: 200px !default;
 
