--- a/src/scss/layout/footer/_social.scss
+++ b/src/scss/layout/footer/_social.scss
@@ -1,6 +1,7 @@
-// =====================================================
-// Social
-// =====================================================
+/**
+ * Copyright @ 2023 Sparkle
+ * https://github.com/danieledeluca/sparkle
+ */
 
 $footer-social-gap: 0.5rem !default;
 $footer-social-margin-bottom-md: 0.5rem !default;
