--- a/src/scss/layout/header/_hamburger.scss
+++ b/src/scss/layout/header/_hamburger.scss
@@ -1,6 +1,7 @@
-// =====================================================
-// Hamburger
-// =====================================================
+/**
+ * Copyright @ 2023 Sparkle
+ * https://github.com/danieledeluca/sparkle
+ */
 
 $header-hamburger-margin-right: -$container-padding-x !default;
 $header-hamburger-padding: 0 $container-padding-x !default;
