--- a/src/scss/layout/header/_layout.scss
+++ b/src/scss/layout/header/_layout.scss
@@ -1,6 +1,7 @@
-// =====================================================
-// Layout
-// =====================================================
+/**
+ * Copyright @ 2023 Sparkle
+ * https://github.com/danieledeluca/sparkle
+ */
 
 $header-background-color: $white !default;
 $header-box-shadow: 0 5px 20px rgba($black, 0.05) !default;
