--- a/src/scss/layout/header/_logo.scss
+++ b/src/scss/layout/header/_logo.scss
@@ -1,6 +1,7 @@
-// =====================================================
-// Logo
-// =====================================================
+/**
+ * Copyright @ 2023 Sparkle
+ * https://github.com/danieledeluca/sparkle
+ */
 
 $header-logo-margin-right: 1.25rem !default;
 $header-logo-padding: 1rem 0 !default;
