--- a/src/scss/layout/header/_navbar.scss
+++ b/src/scss/layout/header/_navbar.scss
@@ -1,6 +1,7 @@
-// =====================================================
-// Navbar
-// =====================================================
+/**
+ * Copyright @ 2023 Sparkle
+ * https://github.com/danieledeluca/sparkle
+ */
 
 $header-navbar-background-color: $white !default;
 
