--- a/src/scss/sparkle.scss
+++ b/src/scss/sparkle.scss
@@ -1,6 +1,7 @@
-// =====================================================
-// Sparkle
-// =====================================================
+/**
+ * Copyright @ 2023 Sparkle
+ * https://github.com/danieledeluca/sparkle
+ */
 
 @import 'abstracts/abstracts';
 @import 'base/base';
