--- a/src/scss/abstracts/variables/_buttons.scss
+++ b/src/scss/abstracts/variables/_buttons.scss
@@ -1,6 +1,7 @@
-// =====================================================
-// Buttons
-// =====================================================
+/**
+ * Copyright @ 2023 Sparkle
+ * https://github.com/danieledeluca/sparkle
+ */
 
 // Button multipliers
 $button-padding-x-multiplier: 2 !default;
