--- a/src/scss/abstracts/variables/_layout.scss
+++ b/src/scss/abstracts/variables/_layout.scss
@@ -1,6 +1,7 @@
-// =====================================================
-// Layout
-// =====================================================
+/**
+ * Copyright @ 2023 Sparkle
+ * https://github.com/danieledeluca/sparkle
+ */
 
 // Breakpoints
 $breakpoints: (
