--- a/src/scss/abstracts/variables/_options.scss
+++ b/src/scss/abstracts/variables/_options.scss
@@ -1,6 +1,7 @@
-// =====================================================
-// Options
-// =====================================================
+/**
+ * Copyright @ 2023 Sparkle
+ * https://github.com/danieledeluca/sparkle
+ */
 
 $prefix: 'sk' !default;
 
