--- a/src/scss/abstracts/variables/_variables.scss
+++ b/src/scss/abstracts/variables/_variables.scss
@@ -1,6 +1,7 @@
-// =====================================================
-// Variables
-// =====================================================
+/**
+ * Copyright @ 2023 Sparkle
+ * https://github.com/danieledeluca/sparkle
+ */
 
 @import 'options';
 @import 'colors';
