--- a/src/scss/base/_forms.scss
+++ b/src/scss/base/_forms.scss
@@ -1,6 +1,7 @@
-// =====================================================
-// Forms
-// =====================================================
+/**
+ * Copyright @ 2023 Sparkle
+ * https://github.com/danieledeluca/sparkle
+ */
 
 label {
     &.is-required {
