--- a/src/scss/base/_tables.scss
+++ b/src/scss/base/_tables.scss
@@ -1,6 +1,7 @@
-// =====================================================
-// Tables
-// =====================================================
+/**
+ * Copyright @ 2023 Sparkle
+ * https://github.com/danieledeluca/sparkle
+ */
 
 table {
     &.table--responsive {
