--- a/src/scss/base/reset/_document.scss
+++ b/src/scss/base/reset/_document.scss
@@ -1,11 +1,13 @@
-// =====================================================
-// Document
-// =====================================================
+/**
+ * Copyright @ 2023 Sparkle
+ * https://github.com/danieledeluca/sparkle
+ */
 
 // Global
-// =====================================================
-// Change from `box-sizing: content-box` to `box-sizing: border-box`
-// so that `width` is not affected by `padding` or `border`
+/**
+ * Copyright @ 2023 Sparkle
+ * https://github.com/danieledeluca/sparkle
+ */
 
 *,
 *::before,
@@ -14,13 +16,10 @@
 }
 
 // Body
-// =====================================================
-// 1. Remove the margin in all browsers
-// 2. As a best practice, apply a default `background-color`
-// 3. Correct the line height in all browsers
-// 4. Prevent adjustments of font size after orientation changes in iOS
-// 5. Change the default tap highlight to be completely transparent in iOS
-// 6. Make footer sticky to bottom
+/**
+ * Copyright @ 2023 Sparkle
+ * https://github.com/danieledeluca/sparkle
+ */
 
 body {
     display: flex; // 6
