--- a/src/scss/base/reset/_reset.scss
+++ b/src/scss/base/reset/_reset.scss
@@ -1,6 +1,7 @@
-// =====================================================
-// Reset
-// =====================================================
+/**
+ * Copyright @ 2023 Sparkle
+ * https://github.com/danieledeluca/sparkle
+ */
 
 // Normalization of HTML elements, manually forked from Normalize.css to applying new styles.
 // Normalize is licensed MIT. https://github.com/necolas/normalize.css
