--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -1,6 +1,7 @@
-// =====================================================
-// Card
-// =====================================================
+/**
+ * Copyright @ 2023 Sparkle
+ * https://github.com/danieledeluca/sparkle
+ */
 
 $card-margin-bottom: 2rem !default;
 $card-background-color: $white !default;
