--- a/src/scss/layout/_layout.scss
+++ b/src/scss/layout/_layout.scss
@@ -1,6 +1,7 @@
-// =====================================================
-// Layout
-// =====================================================
+/**
+ * Copyright @ 2023 Sparkle
+ * https://github.com/danieledeluca/sparkle
+ */
 
 @import 'header/header';
 @import 'footer/footer';
