--- a/src/scss/layout/header/_header.scss
+++ b/src/scss/layout/header/_header.scss
@@ -1,6 +1,7 @@
-// =====================================================
-// Header
-// =====================================================
+/**
+ * Copyright @ 2023 Sparkle
+ * https://github.com/danieledeluca/sparkle
+ */
 
 @import 'layout';
 @import 'logo';
