--- a/src/scss/base/reset/_interactive.scss
+++ b/src/scss/base/reset/_interactive.scss
@@ -4,10 +4,8 @@
  */
 
 // Summary
-/**
- * Copyright @ 2023 Sparkle
- * https://github.com/danieledeluca/sparkle
- */
+// =====================================================
+// 1. Add the correct display in all browsers
 
 summary {
     display: list-item; // 1
