--- a/src/scss/base/reset/_document.scss
+++ b/src/scss/base/reset/_document.scss
@@ -4,10 +4,9 @@
  */
 
 // Global
-/**
- * Copyright @ 2023 Sparkle
- * https://github.com/danieledeluca/sparkle
- */
+// =====================================================
+// Change from `box-sizing: content-box` to `box-sizing: border-box`
+// so that `width` is not affected by `padding` or `border`
 
 *,
 *::before,
@@ -16,10 +15,13 @@
 }
 
 // Body
-/**
- * Copyright @ 2023 Sparkle
- * https://github.com/danieledeluca/sparkle
- */
+// =====================================================
+// 1. Remove the margin in all browsers
+// 2. As a best practice, apply a default `background-color`
+// 3. Correct the line height in all browsers
+// 4. Prevent adjustments of font size after orientation changes in iOS
+// 5. Change the default tap highlight to be completely transparent in iOS
+// 6. Make footer sticky to bottom
 
 body {
     display: flex; // 6
